small final changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,3 +59,15 @@ h1 {
 table {
     text-align: center;
 }
+
+.container {
+    position: relative;
+    text-align: center;
+}
+
+.top {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+    font-style: italic;
+}
